# SNACKAI-CoCo-PolyMarket

./: .env.example  .gitignore  README.md  SETUP_SNOWFLAKE.sql  jest.config.js  main.py  manage.sh  next.config.ts  package-lock.json  package.json  polymarket_fetcher.py  pyproject.toml  requirements.txt  snowflake_jwt_auth.py  snowpipe_streaming_client.py  test_polymarket.py  validation.py
__tests__/: utils.test.ts
app/: globals.css  layout.tsx  page.tsx
app/api/export/: route.ts
app/api/markets/: route.ts
app/api/streaming/: route.ts
app/components/: charts.tsx  market-cards.tsx
lib/: snowflake.ts  utils.ts  validations.ts
