[project]
name = "polymarket-snowflake-streamer"
version = "1.0.0"
description = "Polymarket prediction market data streamed to Snowflake via Snowpipe Streaming v2 High-Performance REST API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Tim Spann"}
]

dependencies = [
    "requests>=2.31.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
